[gd_scene load_steps=7 format=2]

[ext_resource path="res://components/backpack/assets/test2.png" type="Texture" id=1]
[ext_resource path="res://components/backpack/components/backpack/scripts/backpack.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[sub_resource type="CircleShape2D" id=2]
radius = 41.0

[sub_resource type="CircleShape2D" id=3]
radius = 40.0

[sub_resource type="CircleShape2D" id=4]
radius = 40.0

[node name="BackPack" type="Node2D"]
script = ExtResource( 2 )

[node name="Place" type="Area2D" parent="."]
z_index = 1

[node name="ConnectArea" type="CollisionShape2D" parent="Place"]
position = Vector2( 96, -64 )
shape = SubResource( 1 )

[node name="Place2" type="Area2D" parent="."]
z_index = 1

[node name="ConnectArea" type="CollisionShape2D" parent="Place2"]
position = Vector2( -110, -64 )
shape = SubResource( 2 )

[node name="Place3" type="Area2D" parent="."]
z_index = 1

[node name="ConnectArea" type="CollisionShape2D" parent="Place3"]
position = Vector2( 95, 95 )
shape = SubResource( 3 )

[node name="Place4" type="Area2D" parent="."]
z_index = 1

[node name="ConnectArea" type="CollisionShape2D" parent="Place4"]
position = Vector2( -110, 95 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -224.0
margin_top = -312.0
margin_right = 224.0
margin_bottom = -224.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
